@@ -6,7 +6,7 @@ import net.minecraft.item.Item;
 public class GOTItemLegendaryCrowbar extends GOTItemSword {
 	public GOTItemLegendaryCrowbar(Item.ToolMaterial material) {
 		super(material);
-		setMaxDamage(1500);
+		setMaxDamage(9999);
 		gotWeaponDamage = 999.0f;
 		setCreativeTab(GOTCreativeTabs.TAB_STORY);
 	}
