@@ -5,8 +5,8 @@ import got.common.database.GOTCreativeTabs;
 public class GOTItemLegendaryLongsword extends GOTItemLongsword {
 	public GOTItemLegendaryLongsword(ToolMaterial material) {
 		super(material);
-		setMaxDamage(1500);
-		gotWeaponDamage *= 1.5f;
+		setMaxDamage((int) (getMaxDamage() * 1.1f));
+		gotWeaponDamage *= 1.1f;
 		setCreativeTab(GOTCreativeTabs.TAB_STORY);
 	}
 }
