@@ -10,8 +10,8 @@ public class GOTItemLegendarySword extends GOTItemSword {
 
 	public GOTItemLegendarySword(Item.ToolMaterial material, HitEffect e) {
 		super(material, e);
-		setMaxDamage(1500);
-		gotWeaponDamage *= 1.5f;
+		setMaxDamage((int) (getMaxDamage() * 1.1f));
+		gotWeaponDamage *= 1.1f;
 		setCreativeTab(GOTCreativeTabs.TAB_STORY);
 	}
 }
