@@ -7004,3 +7004,36 @@ got.db.STRUCTURE_NO_BIOMES.name=This structure does not naturally generate in an
 got.db.STRUCTURE_NO_ENTITIES.name=This structure has no mobs - it is uninhabited.
 got.db.TREE_HAS_BIOMES.name=This tree grows in some [[:Category:Biomes|biomes]] of the Game of Thrones world; the full list is given below. If a tree type only occurs in a specific biome variant, the variant will be specified in parentheses.
 got.db.TREE_NO_BIOMES.name=This tree is considered extinct and does not grow in any [[:Category:Biomes|biomes]]. However, it can be obtained by the player in creative mode or grown from a sapling.
+got.db.ArrynSettlement.name=Arryn Vale Settlement
+got.db.BraavosSettlement.name=Braavos Settlement
+got.db.CrownlandsSettlement.name=Crownlands Settlement
+got.db.DorneSettlement.name=Dorne Settlement
+got.db.DothrakiSettlement.name=Dothraki Camp
+got.db.DragonstoneSettlement.name=Dragonstone Settlement
+got.db.GhiscarSettlement.name=Ghiscar Settlement
+got.db.GiftSettlement.name=Gift Settlement
+got.db.GoldenCompanySettlement.name=Golden Company Camp
+got.db.HillmanSettlement.name=Hillmen Village
+got.db.IbbenSettlement.name=Ibben Settlement
+got.db.IronbornSettlement.name=Iron Islands Settlement
+got.db.JogosNhaiSettlement.name=Jogos Nhai Settlement
+got.db.LhazarSettlement.name=Lhazar Settlement
+got.db.LorathSettlement.name=Lorath Settlement
+got.db.LysSettlement.name=Lys Settlement
+got.db.MossovySettlement.name=Mossovy Settlement
+got.db.MyrSettlement.name=Myr Settlement
+got.db.NorthSettlement.name=North Settlement
+got.db.NorvosSettlement.name=Norvos Settlement
+got.db.PentosSettlement.name=Pentos Settlement
+got.db.QarthSettlement.name=Qarth Settlement
+got.db.QohorSettlement.name=Qohor Settlement
+got.db.ReachSettlement.name=Reach Settlement
+got.db.RiverlandsSettlement.name=Riverlands Settlement
+got.db.SothoryosSettlement.name=Sothoryos Village
+got.db.StormlandsSettlement.name=Stormlands Settlement
+got.db.SummerSettlement.name=Summer Islands Settlement
+got.db.TyroshSettlement.name=Tyrosh Settlement
+got.db.VolantisSettlement.name=Volantis Settlement
+got.db.WesterlandsSettlement.name=Westerlands Settlement
+got.db.WildlingSettlement.name=Wildling Village
+got.db.YiTiSettlement.name=Yi Ti Settlement
