@@ -7004,3 +7004,36 @@ got.db.STRUCTURE_NO_BIOMES.name=Эта структура ни в одном [[:
 got.db.STRUCTURE_NO_ENTITIES.name=В этой структуре нет никаких мобов - она необитаемая.
 got.db.TREE_HAS_BIOMES.name=Это дерево произрастает в некоторых [[:Категория:Биомы|биомах]] Игры престолов; полный их список указан ниже. Если вид деревьев встречается только в определённом варианте биома, то вариант будет указан в скобках.
 got.db.TREE_NO_BIOMES.name=Это дерево считается вымершим и не растёт ни в каких [[:Категория:Биомы|биомах]]. Тем не менее, оно может быть получено игроком в креативе или выращено из саженца.
+got.db.ArrynSettlement.name=Поселение Долины Аррен
+got.db.BraavosSettlement.name=Поселение Браавоса
+got.db.CrownlandsSettlement.name=Поселение Королевских земель
+got.db.DorneSettlement.name=Поселение Дорна
+got.db.DothrakiSettlement.name=Лагерь дотракийцев
+got.db.DragonstoneSettlement.name=Поселение Драконьего Камня
+got.db.GhiscarSettlement.name=Поселение Гискара
+got.db.GiftSettlement.name=Поселение Дара
+got.db.GoldenCompanySettlement.name=Лагерь Золотых мечей
+got.db.HillmanSettlement.name=Деревня горцев
+got.db.IbbenSettlement.name=Поселение Иббена
+got.db.IronbornSettlement.name=Поселение Железных островов
+got.db.JogosNhaiSettlement.name=Поселение Джогос Нхая
+got.db.LhazarSettlement.name=Поселение Лхазара
+got.db.LorathSettlement.name=Поселение Лората
+got.db.LysSettlement.name=Поселение Лиса
+got.db.MossovySettlement.name=Поселение Моссовии
+got.db.MyrSettlement.name=Поселение Мира
+got.db.NorthSettlement.name=Поселение Севера
+got.db.NorvosSettlement.name=Поселение Норвоса
+got.db.PentosSettlement.name=Поселение Пентоса
+got.db.QarthSettlement.name=Поселение Кварта
+got.db.QohorSettlement.name=Поселение Квохора
+got.db.ReachSettlement.name=Поселение Простора
+got.db.RiverlandsSettlement.name=Поселение Речных земель
+got.db.SothoryosSettlement.name=Деревня соторийцев
+got.db.StormlandsSettlement.name=Поселение Штормовых земель
+got.db.SummerSettlement.name=Поселение Летних островов
+got.db.TyroshSettlement.name=Поселение Тироша
+got.db.VolantisSettlement.name=Поселение Волантиса
+got.db.WesterlandsSettlement.name=Поселение Западных земель
+got.db.WildlingSettlement.name=Деревня одичалых
+got.db.YiTiSettlement.name=Поселение Йи Ти
